--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,8 +12,8 @@ jobs:
       - name: Publish to registry
         uses: elgohr/Publish-Docker-Github-Action@main
         with:
-          registry: docker.pkg.github.com
-          name: docker.pkg.github.com/gthrm/nestjs-course/nestjs-course
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          registry: ghcr.io
+          name: gthrm/nestjs-course/nestjs-course
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
           tags: "develop"
