--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   my_api:
-    image: my_api:latest
+    image: ghcr.io/gthrm/nestjs-course/nestjs-course:develop
     container_name: my_api
     restart: always
     ports:
