--- a/package.json
+++ b/package.json
@@ -27,27 +27,38 @@
     "@nestjs/jwt": "8.0.0",
     "@nestjs/passport": "8.0.1",
     "@nestjs/platform-express": "8.0.0",
+    "@nestjs/serve-static": "^2.2.2",
     "@typegoose/typegoose": "9.2.0",
+    "app-root-path": "^3.0.0",
     "bcryptjs": "2.4.3",
     "class-transformer": "0.5.1",
     "class-validator": "0.13.2",
+    "date-fns": "^2.27.0",
+    "fs-extra": "^10.0.0",
     "mongoose": "6.0.14",
     "nestjs-typegoose": "7.1.38",
     "passport": "0.5.0",
     "passport-jwt": "4.0.0",
     "reflect-metadata": "0.1.13",
     "rimraf": "3.0.2",
-    "rxjs": "7.2.0"
+    "rxjs": "7.2.0",
+    "sharp": "^0.29.3",
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "@nestjs/testing": "8.0.0",
+    "@types/app-root-path": "^1.2.4",
     "@types/bcryptjs": "2.4.2",
     "@types/express": "4.17.13",
+    "@types/fs-extra": "^9.0.13",
     "@types/jest": "27.0.2",
     "@types/mongoose": "5.11.97",
+    "@types/multer": "^1.4.7",
     "@types/node": "16.0.0",
     "@types/passport-jwt": "3.0.6",
+    "@types/sharp": "^0.29.4",
     "@types/supertest": "2.0.11",
+    "@types/xml2js": "^0.4.9",
     "@typescript-eslint/eslint-plugin": "5.0.0",
     "@typescript-eslint/parser": "5.0.0",
     "eslint": "8.0.1",
