--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/axios": "^0.0.3",
     "@nestjs/common": "8.2.3",
     "@nestjs/config": "1.1.5",
     "@nestjs/core": "8.0.0",
     "@nestjs/jwt": "8.0.0",
     "@nestjs/passport": "8.0.1",
     "@nestjs/platform-express": "8.0.0",
+    "@nestjs/schedule": "^1.0.2",
     "@nestjs/serve-static": "^2.2.2",
     "@typegoose/typegoose": "9.2.0",
     "app-root-path": "^3.0.0",
@@ -50,6 +52,7 @@
     "@nestjs/testing": "8.0.0",
     "@types/app-root-path": "^1.2.4",
     "@types/bcryptjs": "2.4.2",
+    "@types/cron": "^1.7.3",
     "@types/express": "4.17.13",
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "27.0.2",
